episode.html 하단 스크립트 부분에 차트 js 파일 스크립트 추가함 footer클래스 삭제함
kyewordbarchart, writerbarchart 수정
chart.scss 크기 수정

--- a/webtoon - project/episode.html
+++ b/webtoon - project/episode.html
@@ -420,7 +420,7 @@
 
             <!-- 작가 -->
             <div class="col-xl-3 col-md-6 mb-4">
-              <div class="card border-left-primary shadow h-100 py-2">
+              <div class="card border-left-success shadow h-100 py-2">
                 <div class="card-body">
                   <div class="row no-gutters align-items-center">
                     <div class="col mr-2">
@@ -539,13 +539,13 @@
 
 
             <!-- 작품키워드 -->
-            <div class="col-xl-6 col-lg-5 col-md-6 col-lg-5">
+            <div class="col-xl-6 col-md-6 col-lg-5">
               <div class="card shadow mb-4">
                 <div class="card-header py-3">
                   <h6 class="m-0 font-weight-bold text-primary">작품 키워드</h6>
                 </div>
                 <div class="card-body">
-                  <div class="chart-bar">
+                  <div class="chart-bar2">
                     <canvas id="keywordbarchart"></canvas>
                   </div>
                   <hr>
@@ -563,7 +563,7 @@
                   <h6 class="m-0 font-weight-bold text-primary">작가  키워드</h6>
                 </div>
                 <div class="card-body">
-                  <div class="chart-bar">
+                  <div class="chart-bar3">
                     <canvas id="writerbarchart"></canvas>
                   </div>
                   <hr>
@@ -640,13 +640,13 @@
       <!-- End of Main Content -->
 
       <!-- Footer -->
-      <footer class="sticky-footer bg-white">
+      <!-- <footer class="sticky-footer bg-white">
         <div class="container my-auto">
           <div class="copyright text-center my-auto">
             <span>Copyright &copy; Your Website 2019</span>
           </div>
         </div>
-      </footer>
+      </footer> -->
       <!-- End of Footer -->
 
     </div>
@@ -699,6 +699,10 @@
   <script src="js/demo/chart-pie-demo.js"></script>
   <script src="js/demo/chart-bar-demo.js"></script>
   <script src="js/demo/chart-line-demo.js"></script>
+  <script src="js/demo/kyewordbarchart.js"></script>
+  <script src="js/demo/writerbarchart.js"></script>
+
+
 
 
 </body>
